commit project 2 heroku

--- a/views/about.erb
+++ b/views/about.erb
@@ -6,8 +6,6 @@
   </ul>
   </div>
 
-<div class="users">
-  <h1>
-    <%= " #{@users["email"]} " %>
-  </h1>
-</div>
+    <div class="container">
+    A website for posting and discussing music production and engineering techniques.
+    </div>
