--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,55 @@
-<h1>Music Production 4um</h1>
-<h2>Share your music production techniques</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+  <div class="container">
+  <header>
+    <div class="top">
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/threads">Threads</a></li>
+    <li><a href="/about">About</a></li>
+  </ul>
+  </div>
+    <h3>Music Production 4um</h3>
+
+<img src="https://s-media-cache-ak0.pinimg.com/736x/9d/09/ed/9d09ed50d08933c8c883b1a418159492.jpg" height=c"300px" width="400px">
+
+      <h4>Login</h4>
+      <link href="css/style.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="main-container">
+
+      <form class="Login" action="/threads" method="get">
+        <label for="email">Email: </label>
+        <input name="email" placeholder="Your email here." type="text" />
+        <br />
+        <label for="password">Password: </label>
+        <input name="password" placeholder="Your password here." type="password" />
+        <br />
+        <input class="button-primary" input type="submit" value="Login" />
+      </form>
+    </div>
+    </body>
+
+    <h4>Signup</h4>
+    <link href="css/style.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="main-container">
+      <form class="signup" action="/signup" method="post">
+        <label for="email">Email: </label>
+        <input name="email" placeholder="Your email here." type="text" />
+        <br />
+        <label for="password">Password: </label>
+        <input name="password" placeholder="Your password here." type="password" />
+        <br />
+        <input class="button-primary" input type="submit" value="Sign Up" />
+      </form>
+    </div>
+  </body>
+  </div>
+</html>
+
+
+
