--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,8 @@
 <html>
 <head>
   <link href="/css/style.css" rel="stylesheet" type="text/css">
+  <link href="/css/skeleton.css" rel="stylesheet" type="text/css">
+  <link href="/css/normalize.css" rel="stylesheet" type="text/css">
 <script src="/js/jquery.js" type="text/javascript"></script>
 <script src="/js/script.js" type="text/javascript"></script>
 </head>
