--- a/views/threads.erb
+++ b/views/threads.erb
@@ -12,7 +12,7 @@
     <div class="main-container">
       <form class="post" action="/threads" method="post">
         <label for="topic"></label>
-        <input name="topic" placeholder="Your password here." type="text" />
+        <input name="topic" placeholder="New Thread." type="text" />
         <br>
         <input class="button-primary" input type="submit" value="Post" />
       </form>
